BPMPetrinet rebuild